--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dom-to-image-more": "^2.8.0",
     "file-saver": "^2.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "browserslist": {
     "production": [
